Fix head nav align bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,17 @@ header, main {
   padding-left: 300px;
 }
 
+.brand-logo {
+  margin-left: 15px;
+}
+
 @media only screen and (max-width : 992px) {
   header, main {
     padding-left: 0;
+  }
+
+  .brand-logo {
+    margin-left: 0;
   }
 }
 
@@ -18,7 +26,7 @@ a:hover {
   cursor: pointer;
 }
 
-
+/*Loading animation*/
 *, *::after, *::before {
   box-sizing: inherit;
 }
